feat: add basic user operations

--- a/vision/flags.test.yml
+++ b/vision/flags.test.yml
@@ -5,6 +5,7 @@ vision:
   testing_mode: true
   display_traceback: true
   namespace: vianova-test
+  login_secret: test111
 vision_pg:
   password: test-password
   ssl_mode: false
