--- a/vision/requirements.txt
+++ b/vision/requirements.txt
@@ -1,17 +1,26 @@
+## The following requirements were added by pip freeze:
 alembic==1.7.4
 anyio==3.3.3
 asgiref==3.4.1
 asn1crypto==1.4.0
 attrs==21.2.0
+bcrypt==3.2.0
 black==21.9b0
+bracex==2.2.1
+casbin==1.15.4
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
 click==8.0.3
+click-spinner==0.1.10
 coverage==6.1.1
 cryptography==35.0.0
 cycler==0.10.0
+dnspython==2.2.0
+ecdsa==0.17.0
+email-validator==1.1.3
 fastapi==0.70.0
+fastapi-users-db-sqlalchemy==2.0.4
 flake8==4.0.1
 GeoAlchemy2==0.9.4
 geojson==2.5.0
@@ -26,6 +35,7 @@ iniconfig==1.1.1
 Jinja2==3.0.2
 jwt==1.3.1
 kiwisolver==1.3.2
+makefun==1.13.1
 Mako==1.1.5
 MarkupSafe==2.0.1
 matplotlib==3.4.3
@@ -35,6 +45,7 @@ numpy==1.21.3
 opencv-contrib-python==4.5.4.58
 opencv-python==4.5.4.58
 packaging==21.0
+passlib==1.7.4
 pathspec==0.9.0
 pg8000==1.22.0
 Pillow==8.4.0
@@ -43,35 +54,43 @@ pluggy==1.0.0
 postgis==1.0.4
 psycopg2==2.9.1
 py==1.10.0
+pyasn1==0.4.8
 pycodestyle==2.8.0
 pycountry==20.7.3
 pycparser==2.20
 pydantic==1.8.2
 pyflakes==2.4.0
+PyJWT==2.3.0
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-mock==3.6.1
 python-dateutil==2.8.2
 python-dotenv==0.19.1
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 regex==2021.10.8
 requests==2.26.0
+rsa==4.8
 scramp==1.4.1
 Shapely==1.8.0
+simpleeval==0.9.12
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.25
 starlette==0.16.0
+starlette-context==0.3.3
 testing.common.database==2.0.3
 testing.postgresql==1.3.0
 toml==0.10.2
 tomli==1.2.1
+typer==0.4.0
 typing-extensions==3.10.0.2
 urllib3==1.26.7
 uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
+wcmatch==8.3
 websockets==10.0
 zipp==3.6.0
