--- a/vision/requirements.txt
+++ b/vision/requirements.txt
@@ -18,6 +18,8 @@ cryptography==35.0.0
 cycler==0.10.0
 dnspython==2.2.0
 ecdsa==0.17.0
+elastic-transport==8.0.1
+elasticsearch==8.0.1
 email-validator==1.1.3
 fastapi==0.70.0
 fastapi-users-db-sqlalchemy==2.0.4
