--- a/louvre/package.json
+++ b/louvre/package.json
@@ -48,7 +48,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "release": "ionic build --prod --release --aot --minifyjs --optimizejs --minifycss"
   },
   "eslintConfig": {
     "extends": [
