--- a/louvre/package.json
+++ b/louvre/package.json
@@ -24,8 +24,10 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.26.0",
     "ionicons": "^5.4.0",
+    "leaflet": "^1.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
@@ -70,7 +72,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.4.1"
+    "@capacitor/cli": "3.4.1",
+    "@types/leaflet": "^1.7.9"
   },
   "description": "An Ionic project"
 }
