--- a/louvre/package.json
+++ b/louvre/package.json
@@ -7,6 +7,7 @@
     "@capacitor/android": "3.4.1",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "3.4.1",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.4.1",
     "@capacitor/keyboard": "1.2.2",
