feat: add geojson to DB

--- a/vision/Taskfile.yml
+++ b/vision/Taskfile.yml
@@ -39,3 +39,4 @@ tasks:
   recalculate_descriptors: PYENV_VERSION=vision python -m commands.recalculate_descriptors
   fetch_activities: PYENV_VERSION=vision python -m commands.fetch_activities
   a2g: PYENV_VERSION=vision python -m commands.activities_to_geometry
+  g2gi: PYENV_VERSION=vision python -m commands.geojson_to_geometry_items
